# backend-challenge

./: .env.template  CHALLENGE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: aliases.py  config.py  main.py  orm.py  setup.py
src/models/: __init__.py  alert.py  camera.py  customer.py
src/routers/: alerts.py  camera.py  cameras.py
src/schemas/: __init__.py  alert.py  camera.py
src/security/: auth.py  login.py
src/validations/: __init__.py  alerts.py  cameras.py
